<resources>
    <string name="app_name">pheramor_project</string>
    <string name="user_email">User Email</string>
    <string name="user_password">Password</string>
    <string name="user_password_confirm">Confirm Password</string>
    <string name="next_button">next</string>
    <string name="password_not_match">* the pasword and confim passwrod is not match, please try again!</string>
    <string name="user_name">Full Name</string>
    <string name="user_zip_code">ZipCode</string>
    <string name="user_height">Height</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="user_gender">Gender</string>
    <string name="user_race">Race</string>
    <string name="user_religion">Religion</string>
    <string name="user_picture">Please upload a user profile picture</string>
    <string name="user_picture_edit">edit</string>
    <string name="edit_button_text">Edit</string>
    <string name="upload_button_text">Confirm and upload</string>
    <string name="register_title">Welcome to Pheramor</string>
    <string name="register_button_text">Register to Pheramor</string>
    <string name="email_empty_warning">Email is required !!</string>
    <string name="email_not_valid_warning">Enter a valid email !!</string>
    <string name="password_empty_warning">Password is required !!</string>
    <string name="password_not_valid_warning"><![CDATA[Enter a valid password (len > 6)!!]]></string>
    <string name="password_not_match_warning">Password is not match !!</string>
    <string name="user_name_empty_warning">User name is required !!</string>
    <string name="zipcode_empty_warning">Zipcode is required !!</string>
    <string name="height_empty_warning">Height is required</string>
    <string name="height_not_valid_warning">Enter a valid height !!</string>
    <string name="register_activity_title">Welcome to Pheramor</string>
    <string name="gender_empty_warning">Gender is required !!</string>
    <string name="dob_empty_warning">Date of brith is required !!</string>
    <string name="dob_not_valid_warning">Enter a valid date of birth !!</string>
    <string name="user_gender_of_interest">Interest in gender</string>
    <string name="user_interest_age_range">Interest age range</string>
    <string name="interest_age_range_from">From</string>
    <string name="interest_age_range_to">To</string>
    <string name="gender_interest_empty_warning">Gender in interest is needed !!</string>
    <string name="max_interest_age_empty_warning">Max interest age is required !!</string>
    <string name="min_interest_age_empty_warning">Min interest age is required !!</string>
    <string name="min_interest_age_not_valid_warning">Min age can not be larger than max age !!</string>
    <string name="race_empty_warning">race is needed</string>
    <string name="take_photo">Take a picture              </string>
    <string name="pick_image">pick an image from album</string>
    <string name="confirm_activity_title">Here is your profile</string>
    <string name="email_title">Email:</string>
    <string name="password_title">Password:</string>
    <string name="name_title">Name:</string>
    <string name="zipcode_title">ZipCode:</string>
    <string name="height_title">Height</string>
    <string name="gender_title">Gender:</string>
    <string name="dob_title">Date of birth:</string>
    <string name="gender_in_interest_title">Gender in interest:</string>
    <string name="age_range_title">Interest age range:</string>
    <string name="race_title">Race:</string>
    <string name="religion_title">Religion:</string>
    <string name="upload_success_message">Upload Success !!</string>
    <string name="success_confirm_button">confirm</string>
    <string name="success_cancel_button">cancel</string>

    <string-array name="height_unit_chooser">
        <item>inch</item>
        <item>mm</item>
    </string-array>

    <string-array name="gender_chooser">
        <item>male</item>
        <item>female</item>
        <item>eunuch</item>
    </string-array>

    <string-array name="race_chooser">
        <item>American Indian or Alaska Native</item>
        <item>Asian</item>
        <item>Black or African American</item>
        <item>Native Hawaiian or Other Pacific Islander</item>
        <item>White</item>
        <item>not specify</item>
    </string-array>

    <string-array name="religion_chooser">
        <item>Christianity</item>
        <item>Islam</item>
        <item>Nonreligious</item>
        <item>Hinduism</item>
        <item>Chinese traditional religion</item>
        <item>Buddhism</item>
        <item>Primal-indigenous</item>
        <item>African traditional and Diasporic</item>
        <item>Sikhism</item>
        <item>Juche</item>
        <item>Spiritism</item>
        <item>Judaism</item>
        <item>Bahai</item>
        <item>Jainism</item>
        <item>Shinto</item>
        <item>Cao Dai</item>
        <item>Zoroastrianism</item>
        <item>Tenrikyo</item>
        <item>Neo-Paganism</item>
        <item>Unitarian-Universalism</item>
        <item>not specify</item>
    </string-array>

    <string-array name="interest_in_gender_chooser">
        <item>Heterosexual</item>
        <item>Homosexual</item>
        <item>Lesbian</item>
        <item>Bisexual</item>
        <item>Pansexual</item>
    </string-array>

</resources>
