<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_picture_edit_view_height"
        android:padding="@dimen/layout_padding">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_picture_edit_view_height"
            android:scaleType="fitCenter"
            android:src="@drawable/user_ghost"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:drawableLeft="@drawable/baseline_photo_camera_black_18dp"
            android:textSize="@dimen/text_size_large"
            android:text="@string/user_picture_edit"/>

            <View
                android:id="@+id/user_image_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textPersonName"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_zip_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/user_zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_zip_code"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_height_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/layout_padding">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/user_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_height"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/height_unit_of_measurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/next_button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_padding"
        android:gravity="center"
        android:padding="@dimen/layout_padding"
        android:background="@drawable/button_round_corner"
        android:text="@string/next_button"/>

</LinearLayout>
