<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/background_red"-->
        <!--android:textColor="@color/colorWhite"-->
        <!--android:padding="@dimen/layout_padding"-->
        <!--android:text="@string/password_not_match"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_password_confirm_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/user_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password_confirm"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/next_button_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/layout_padding"
            android:background="@drawable/button_round_corner"
            android:layout_margin="@dimen/layout_padding"
            android:text="@string/next_button"/>

    </LinearLayout>

</LinearLayout>