<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_mid"
            android:layout_marginBottom="@dimen/text_view_margin_bottom"
            android:text="@string/user_race"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/user_race"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.EditText"
            android:padding="@dimen/layout_padding"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_mid"
            android:layout_marginBottom="@dimen/text_view_margin_bottom"
            android:text="@string/user_religion"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/user_religion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.EditText"
            android:padding="@dimen/layout_padding"/>

    </LinearLayout>

    <Button
        android:id="@+id/next_button_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_padding"
        android:gravity="center"
        android:padding="@dimen/layout_padding"
        android:background="@drawable/button_round_corner"
        android:text="@string/next_button"/>

</LinearLayout>